Fri Sep 16 19:54:20 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Atomic_Op.cpp:
        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
        * ace/Object_Manager.cpp:

	  #if 0 ACE_Atomic_Op<ACE_Thread_Mutex, unsigned long>
	  specialization to see if it's responsible for recent
	  TAO performance degradation.

Fri Sep 16 10:57:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * bin/tao_orb_tests.lst:

          Added new TAO/tests/IPV6 test to runlist (only when config
          IPV6 defined).

Thu Sep 15 12:35:27 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * THANKS:

          Added Jin Zhi Ye.

        * ace/os_include/os_stdio.h:

          #undef fgetc and fputc if they are defined, as macro expansion
          conflicts with our use of the same names in the ACE_OS wrapper
          functions.  Reported by Jin Zhi Ye <jinzhiye at kedacom dot com>.

Thu Sep 15 18:55:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/Atomic_Op.inl:

          Small fix to get rid of annoying warning on Windows concerning
          unary '-'.

Wed Sep 14 13:36:34 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Changed ACE_HAS_MEMCPY_LOOP_UNROLL feature test code such that
          smemcpy() correctly returns it's first argument.

          Added third argument to ACE_HAS_MEMCPY_LOOP_UNROLL's AC_DEFINE
          to provide the description for config.h.

Tue Sep 13 14:38:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:

          Changed munching step for VxWorks SIMPC builds to generate asm
          output to circumvent compiler output problem in certain files.

        * include/makeinclude/rules.lib.GNU:

          Small change to make output of prelink step visible for static
          libraries build for VxWorks with -frepo.

Tue Sep 13 09:30:03 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * ace/OS_NS_string.{h,cpp,inl}: